minor fix: landing text no longer overlaps button on mobile

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -31,6 +31,11 @@
     opacity: .75;
 }
 
+.landing-wrapper .typewriter-wrapper {
+    height: 138px;
+    width: 80%
+}
+
 .landing-wrapper a {
     position: absolute;
     bottom: 20%;
@@ -54,6 +59,9 @@
 }
 .landing-wrapper a span {
     margin-left: 5px!important;
+}
+@media( max-width: 378px) { 
+    .landing-wrapper .typewriter-wrapper { margin-top: -50px; }
 }
 
 .nav {
